--- a/module/Application/view/layout/layoutCorrespondencia.phtml
+++ b/module/Application/view/layout/layoutCorrespondencia.phtml
@@ -298,6 +298,9 @@
 						<li><img src=" <?php echo $this->basepath() . '/img/png/usuario.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('parametros', array('controller' => 'estado', 'action' => 'listado'))?>">Estado</a></li>
 						<li><img src=" <?php echo $this->basepath() . '/img/png/usuario.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('parametros', array('controller' => 'ciudad', 'action' => 'listado'))?>">Ciudad</a></li>
 
+						<li><img src=" <?php echo $this->basepath() . '/img/png/usuarios.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('usuarios', array('controller' => 'usuarios', 'index' => 'listado'))?>">Usuarios</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/roles.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('usuarios', array('controller' => 'usuarios', 'roles' => 'listado'))?>">Roles</a></li>
+
 
 					</ul>
     			</td>
