--- a/module/Cartas/view/cartas/cartas/cartainformal.phtml
+++ b/module/Cartas/view/cartas/cartas/cartainformal.phtml
@@ -8,66 +8,66 @@
 				margin: 0 0;
 				padding: 0 0;
 				font-family: sans-serif;
+				font-size:13px;
 				<?php $carta = $this->carta->getCtr_tipo(); if(strtoupper($carta) == 'B'): ?>
 				background-image: url("<?php echo $this->basepath() . '/img/jpg/borrador.jpg'?>");
 				background-repeat: no-repeat;
-				background-position: center;
+				background-position: 50px 100px;
 				<?php endif; ?>
 				}
 		</style>
     </head>
     <body>
-<table cellspacing="0" cellpadding="10" border="0" width="100%" class="tabla_formulario">
+    <div style="padding-top: 130px;">&nbsp;</div>
+<table cellspacing="0" cellpadding="10" border="0" width="70%" align="center">
     <tr>
-        <td>
+        <td colspan="2">
         	<div>Quito D.M, <?php echo date('d') . ' de ' . date('M') . ' de ' . date('Y')?></div>
         	<div><?php echo $this->carta->getCtr_codigo_final()?></div>
         </td>
     </tr>
-    <tr><td>&nbsp;</td></tr>
     <tr>
-    	<td>
-    		<div>TIPO DE PERSONA</div>
-    		<div>DESTINATARIO</div>
-    		<div>CARGO</div>
-    		<div>EMPRESA</div>
-    	</td>
-    </tr>
-    <tr><td>&nbsp;</td></tr>
-    <tr>
-    	<td>
-    		<div><?php echo $this->carta->getCtr_referencia()?></div>
+    	<td colspan="2">
+    		<div><br /><?php echo $this->contacto->getCon_tip_per_es()?></div>
+    		<div><?php echo $this->contacto->getCon_nombre() . ' ' . $this->contacto->getCon_apellido()?></div>
+    		<div><?php echo $this->contacto->getCon_descripcion_es()?></div>
+    		<div><?php echo $this->empresa->getEmp_nombre()?></div>
     	</td>
     </tr>
     <tr>
-    	<td>
-    		<div><?php echo $this->carta->getCtr_saludo()?></div>
+    	<td colspan="2">
+    		<div><br /><b>Ref.: <?php echo $this->carta->getCtr_referencia()?></b></div>
     	</td>
     </tr>
     <tr>
-    	<td>
-    		<div><?php echo $this->carta->getCtr_cuerpo()?></div>
+    	<td colspan="2">
+    		<div><br /><?php echo $this->carta->getCtr_saludo()?></div>
     	</td>
     </tr>
     <tr>
-    	<td>
-    		<div><?php echo $this->carta->getCtr_despedida()?></div>
+    	<td colspan="2">
+    		<div style="text-align: justify;"><?php echo $this->carta->getCtr_cuerpo()?></div>
     	</td>
     </tr>
-    <tr><td>&nbsp;</td></tr>
     <tr>
+    	<td colspan="2">
+    		<div><br /><br /><?php echo $this->carta->getCtr_despedida()?><br /><br /></div>
+    	</td>
+    </tr>
+    <tr><td colspan="2">&nbsp;</td></tr>
+    <tr>
+    <?php foreach ($this->carta_firma as $firma): ?>
     	<td>
     		<table>
     			<tr>
-    				<td>FIRMA 1</td>
-    				<td>FIRMA 2</td>
+    				<td style="text-transform: capitalize;"><?php echo $firma->getEpl_nombre() . ' ' . $firma->getEpl_apellido() ?></td>
     			</tr>
     			<tr>
-    				<td>CARGO FIRMA 1</td>
-    				<td>CARGO FIRMA 2</td>
+    				<td><?php echo $firma->getEpl_cargo()?></td>
     			</tr>
     		</table>
     	</td>
+    	<?php endforeach; ?>
     </tr>
 </table>
 </body>
