--- a/module/Application/view/layout/layoutCorrespondencia.phtml
+++ b/module/Application/view/layout/layoutCorrespondencia.phtml
@@ -269,9 +269,7 @@
 									<img src=" <?php echo $this->basepath() . '/img/png/user.png'?>" border="0" align="absmiddle" style="padding-bottom: 0px;" />
 									
 								</div>
-								<pre>
-									<?php $menu=$_SESSION['Zend_Auth']['storage']->menu; ?>
-								</pre>
+									<?php $menu=$_SESSION['Zend_Auth']['storage']->menu[$_SESSION['Zend_Auth']['storage']->us_role]; ?>
 								<div class="btn-group">
 									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 18px; padding-left: 4px ;"><?php echo $_SESSION['Zend_Auth']['storage']->us_nombre?> &nbsp;<span class="caret"></span></a>
 									<ul class="dropdown-menu">
@@ -291,21 +289,37 @@
     		<tr>
     			<td class="menu">
 					<ul id="menu">
-						
-						<li><img src=" <?php echo $this->basepath() . '/img/png/home.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('application', array('controller' => 'index', 'action' => 'index'))?>">Inicio</a></li>
-						<li><img src=" <?php echo $this->basepath() . '/img/png/contacto.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'listado'))?>">Contactos</a></li>
+						<?php if(in_array('application:index',$menu)): ?>
+							<li><img src=" <?php echo $this->basepath() . '/img/png/home.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('application', array('controller' => 'index', 'action' => 'index'))?>">Inicio</a></li>
+						<?php endif; ?>
+						<?php if(in_array('contactos:index',$menu)): ?>
+							<li><img src=" <?php echo $this->basepath() . '/img/png/contacto.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'listado'))?>">Contactos</a></li>
+						<?php endif; ?>
+						<?php if(in_array('empresas:index',$menu)): ?>							
 						<li><img src=" <?php echo $this->basepath() . '/img/png/empresas.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Empresas</a></li>
+						<?php endif; ?>
+						<?php if(in_array('cartas:cartas',$menu)): ?>						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/correspondencia.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('cartas', array('controller' => 'cartas', 'action' => 'listado'))?>">Correspondencia</a></li>
+						<?php endif; ?>
+						<?php if(in_array('empresas:index',$menu)): ?>						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/recepcion.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Fe de recepci&oacute;n</a></li>
+						<?php endif; ?>
+						<?php if(in_array('pais:listado',$menu)): ?>						
 						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/pais.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('parametros', array('controller' => 'pais', 'action' => 'listado'))?>">Pa&iacute;s</a></li>
+						<?php endif; ?>
+						<?php if(in_array('estado:listado',$menu)): ?>						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/estado.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('parametros', array('controller' => 'estado', 'action' => 'listado'))?>">Estado</a></li>
+						<?php endif; ?>
+						<?php if(in_array('ciudad:listado',$menu)): ?>						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/ciudad.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('parametros', array('controller' => 'ciudad', 'action' => 'listado'))?>">Ciudad</a></li>
-
+						<?php endif; ?>
+						<?php if(in_array('usuarios:index',$menu)): ?>						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/usuarios.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('usuarios', array('controller' => 'usuarios', 'action' => 'index'))?>">Usuarios</a></li>
+						<?php endif; ?>
+						<?php if(in_array('usuarios:roles',$menu)): ?>						
 						<li><img src=" <?php echo $this->basepath() . '/img/png/roles.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('usuarios', array('controller' => 'usuarios', 'action' => 'roles'))?>">Roles</a></li>
-
-
+						<?php endif; ?>
 					</ul>
     			</td>
     			<td valing="top" style="padding: 30px; padding-top: 0px;">
