formulario de login con estilos

--- a/module/Application/view/application/login/index.phtml
+++ b/module/Application/view/application/login/index.phtml
@@ -11,13 +11,10 @@ $formLabel = $this->plugin ( 'formLabel' );
 echo $this->form()->openTag($form);
 
 ?>
-<div class="container">
+<div class="container-main">
 
-	<div class="panel panel-default">
-		<div class="panel-heading panel-heading-txt">&nbsp;</div>
-		<div class="col-md-12"><h3 align="left">Ingreso</h3><hr/></div>
-		<div class="row azul-form-row">
-			<div class="col-md-6">
+
+			<div class="usuario form-item">
 			<?php 
 			$email = $form->get('usu_usuario');
 			echo $formLabel->openTag().$email->getOption('label');
@@ -28,7 +25,7 @@ echo $this->form()->openTag($form);
 			?>
 			</div>
 
-			<div class="col-md-6">
+			<div class="password form-item">
 			<?php 
 			$password = $form->get('usu_clave');
 			echo $formLabel->openTag().$password->getOption('label');
@@ -37,13 +34,11 @@ echo $this->form()->openTag($form);
 			echo $this->formelementerrors($password);
 			?>
 			</div>
-		</div>
-			<div class="row azul-form-row">
-			<div class="col-md-12">
-					<div class="col-sm-6 col-md-5 col-lg-6"><?php echo $this->formelement($form->get('ingresar')) ?></div>
+
+			<div class="boton">
+					<?php echo $this->formelement($form->get('ingresar')) ?>
 			</div>
-		</div>	
-	</div>
+
 </div>
 
 
