fix empresas, campo desactivar en indice

--- a/module/Application/view/application/login/index.phtml
+++ b/module/Application/view/application/login/index.phtml
@@ -12,7 +12,8 @@ echo $this->form()->openTag($form);
 
 ?>
 <div class="container-main">
-
+	<ul class="error_container bs-callout bs-callout-danger">
+	</ul>
 
 			<div class="usuario form-item">
 			<?php 
@@ -45,3 +46,19 @@ echo $this->form()->openTag($form);
 <?php echo $this->form()->closeTag() ?>
 
 <?php endif; ?>
+<script>
+$(document).ready(function(){
+	$("#login").validate({
+		errorLabelContainer: $("ul.error_container"),
+		wrapper: 'li',
+		rules: {
+			usu_usuario: {required:true},
+			usu_clave: {required:true}
+ 		},
+ 		messages:{
+			usu_usuario: {required:'Nombre es un campo requerido'},
+			usu_clave: {required:'Categoría es un campo requerido'},
+ 	 	}
+	});
+});
+</script>
