--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -27,11 +27,16 @@ echo $this->headLink ( array (
         <!-- Scripts -->
         <?php
 								
-echo $this->headScript ()->prependFile ( $this->basePath () . '/js/bootstrap.min.js' )->prependFile ( $this->basePath () . '/js/jquery.min.js' )->prependFile ( $this->basePath () . '/js/respond.min.js', 'text/javascript', array (
-										'conditional' => 'lt IE 9' 
-								) )->prependFile ( $this->basePath () . '/js/html5shiv.js', 'text/javascript', array (
-										'conditional' => 'lt IE 9' 
-								) );
+echo $this->headScript ()
+            		->prependFile($this->basePath() . '/js/jquery-validation/dist/jquery.validate.js')
+					->prependFile ( $this->basePath () . '/js/bootstrap.min.js' )
+					->prependFile ( $this->basePath () . '/js/jquery.min.js' )
+					->prependFile ( $this->basePath () . '/js/respond.min.js', 'text/javascript', array (
+															'conditional' => 'lt IE 9' 
+													) )
+					->prependFile ( $this->basePath () . '/js/html5shiv.js', 'text/javascript', array (
+															'conditional' => 'lt IE 9' 
+													) );
 								?>
     <style type="text/css">
 		body {
