--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -36,7 +36,17 @@
 <tbody>
  <?php foreach ($empresas as $empresa) : ?>
  <tr>
-	 <td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a></td>
+	 <td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a>
+	 <?php if($empresa->getEmp_estado()!='2'):  ?>
+	 <span class='activar-holder' data-emp_id='<?php echo $this->escapeHtml($empresa->emp_id);?>'>
+	 	 | <a 	class='desactivar' 
+	 	 		href="<?php echo $this->url('empresas', array('action'=>'desactivar','id'=> $empresa->emp_id ));?>"
+	 	 		data-emp_id="<?php echo $empresa->emp_id; ?>">
+	 	 			Desactivar
+ 	 		</a>
+	 </span>	
+	 <?php endif; ?> 
+	 </td>
      <td><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
      <td><?php echo $this->escapeHtml($empresa->padre_nombre);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_email);?></td>
@@ -63,5 +73,19 @@
 				},
 				"aaSorting": []
 			});
+			/*
+			$('.desactivar').on('click',function(e){
+				e.preventDefault();
+				var element=$(this);
+				$.ajax({
+	                url: "<?php echo $this->url('empresas', array('controller' => 'empresas', 'action' => 'activar')) ?>",
+	                type: "POST",
+	                dataType: "json",
+	                data: {emp_id:$(element).attr('data-emp_id'),emp_estado:2}
+	            }).done(function(msg) {
+	            	alert('test');
+	                //$('.activar-holder[data-emp_id='+$(element).attr('data-emp_id')+']').hide();
+	            });
+	        });    */
 		});
 </script>
