--- a/module/Application/view/application/error/denied.phtml
+++ b/module/Application/view/application/error/denied.phtml
@@ -1,1 +1,4 @@
-<h3 style="color: red; font-weight: 700;"><?php echo $this->mensaje ?></h3>
+<h3 style="color: white; font-weight: 700; margin:0 auto; width:500px; text-align:center; margin-top:300px;">
+	<?php echo $this->mensaje ?>
+<p style='font-size:16px; font-weight:normal'>Solicite permisos con el administrador del sistema</p>
+</h3>
