--- a/module/Cartas/view/cartas/cartas/cartaformal.phtml
+++ b/module/Cartas/view/cartas/cartas/cartaformal.phtml
@@ -9,7 +9,7 @@
 				padding: 0 0;
 				font-family: sans-serif;
 				font-size:13px;
-				<?php $carta = $this->carta->getCtr_tipo(); if(strtoupper($carta) == 'B'): ?>
+				<?php $fe_recepcion = $this->carta->getCtr_tipo(); if(strtoupper($fe_recepcion) == 'B'): ?>
 				background-image: url("<?php echo $this->basepath() . '/img/jpg/borrador.jpg'?>");
 				background-repeat: no-repeat;
 				background-position: 50px 100px;
